# lvl12

./: .env.example  .gitignore  CLAUDE.md  OLLAMA.md  README.md  docker-compose.yaml  pyproject.toml
.claude/: settings.local.json  settings.local.json.backup
.github/workflows/: build-images.yaml  release.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  cronjob.yaml  deployment.yaml  image-pull-secret.yaml  pvc.yaml  rbac.yaml  service.yaml  serviceaccount.yaml  vault-auth.yaml  vault-connection.yaml  vault-static-secret.yaml
helm/values/: prod.yaml
src/bender/: __init__.py  __main__.py  api.py  app.py  claude_code.py  config.py  interactive.py  job_tracker.py  session_manager.py  slack_handler.py  slack_utils.py
tests/: test_app.py  test_claude_code.py
workspace/: CLAUDE.md
workspace/.claude/: settings.json
workspace/.claude/commands/: hello.md  tailwind-css-patterns.md  ui-ux-pro-max.md
